--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
   <groupId>org.jenkinsci.plugins</groupId>
   <artifactId>git-param</artifactId>
-  <version>1.0.3</version>
+  <version>1.1.0-rsa</version>
   <packaging>hpi</packaging>
 
   <repositories>
