--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.504</version>
+    <version>1.568</version>
   </parent>
 
   <groupId>org.jenkinsci.plugins</groupId>
   <artifactId>git-param</artifactId>
-  <version>1.1.0-rsa</version>
+  <version>1.0.3.12-rsa</version>
   <packaging>hpi</packaging>
 
   <repositories>
@@ -29,20 +29,31 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
+
+  <build>
+  	<pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+            </plugin>
+        </plugins>
+    </pluginManagement>
+  </build>
   
   <name>Git Param Plugin</name>
-  <dependencies>
-  	<dependency>
-  		<groupId>org.jenkinsci.plugins</groupId>
-  		<artifactId>git</artifactId>
-  		<version>1.1.29</version>
-  		<type>jar</type>
-  	</dependency>
+    <dependencies>
     <dependency>
   		<groupId>org.eclipse.jgit</groupId>
   		<artifactId>org.eclipse.jgit</artifactId>
   		<version>3.0.0.201306101825-r</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.jenkins-ci.plugins</groupId>
+  		<artifactId>git</artifactId>
+  		<version>2.3</version>
+	</dependency>
   </dependencies>
   <url>https://github.com/marooou/git-param</url>
   <scm>
